tests/harness/errors/152_set_element_type_mismatch.eu
result: ∅ set.add([1, 2, 3] set.from-list)
